[gd_scene load_steps=2 format=3 uid="uid://bpmpks8ul5feg"]

[ext_resource type="Script" uid="uid://1lvq5hnyr7si" path="res://scripts/UnitFrame.gd" id="1_script"]

[node name="UnitFrame" type="Control"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
anchors_preset = 0
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Portrait" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 60.0
offset_bottom = 60.0
expand_mode = 1

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 65.0
offset_top = 5.0
offset_right = 150.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 14
text = "Hero Name"
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="Panel"]
layout_mode = 0
offset_left = 65.0
offset_top = 30.0
offset_right = 195.0
offset_bottom = 45.0
value = 100.0
show_percentage = false

[node name="ResourceBar" type="ProgressBar" parent="Panel"]
layout_mode = 0
offset_left = 65.0
offset_top = 50.0
offset_right = 195.0
offset_bottom = 65.0
value = 100.0
show_percentage = false

[node name="ResourceText" type="Label" parent="Panel/ResourceBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 155.0
offset_top = 5.0
offset_right = 195.0
offset_bottom = 25.0

[node name="XPBar" type="ProgressBar" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 62.0
offset_right = 195.0
offset_bottom = 68.0
show_percentage = false

[node name="StatusContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 65.0
offset_top = 18.0
offset_right = 195.0
offset_bottom = 33.0
theme_override_constants/separation = 2

[node name="CastingBar" type="ProgressBar" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 65.0
offset_top = 30.0
offset_right = 195.0
offset_bottom = 40.0
show_percentage = false
